--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="https://axelj.dev/favicon.svg" type="image/svg+xml">
+    <title>Local Write</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
