Add border color change in zed mode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="text" id="title-input" placeholder="Title">
             </div>
             <button id="zen-mode-button">Zen</button>
-            <textarea id="text-input"></textarea>
+            <textarea style="border-color: #000;" id="text-input"></textarea>
         </div>
         <div id="saved-notes">
             <h1>Saved Notes</h1>
