--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
             href="https://axelj.dev/favicon.svg"
             type="image/svg+xml"
         />
-        <title>Local Write</title>
+        <meta
+            name="description"
+            content="Write things, they will save to your device, text is not saved on any server."
+        />
+        <title>Writer</title>
         <link rel="stylesheet" href="./main.css" />
     </head>
     <body>
