Update meta description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         />
         <meta
             name="description"
-            content="Write things, they will save to your device, text is not saved on any server."
+            content="Write things, save to your device.
+            Data is stored only in your browser using local storage and is not transmitted to any server. For complete security, users should ensure their browser environment is trustworthy."
         />
         <title>Writer</title>
         <link rel="stylesheet" href="./main.css" />
