--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                     id="search-input"
                     placeholder="Search notes..."
                 />
+                <p id="edge-notification"></p>
+                <div id="notes"></div>
             </div>
             <div id="editor">
                 <div id="editor-top">
                     <div id="commands">
+                        <button id="new-button">New</button>
                         <button id="save-button">Save</button>
                     </div>
                 </div>
