Add data warning

--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
         <link rel="stylesheet" href="./main.css" />
     </head>
     <body>
+        <div
+            id="alpha-warning"
+            style="
+                position: absolute;
+                width: 200px;
+                bottom: 0;
+                margin: 1rem;
+                padding: 1rem;
+                left: 0;
+                color: red;
+                font-weight: bold;
+                background: white;
+                border: 2px solid black;
+            "
+        >
+            <p style="margin: 0; padding: 0">
+                This is an alpha version of the app, data may be wiped and
+                disappear at any time, with no warning. Use only for
+                experimentation & testing
+            </p>
+        </div>
         <main>
             <div id="saved-notes">
                 <input
