Add obnoxious mobile message

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link rel="stylesheet" href="./main.css" />
     </head>
     <body>
+        <div id="screen-size-warning">
+            <p>This website is designed for a desktop experience.</p>
+        </div>
         <div
             id="alpha-warning"
             style="
