--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </div>
             <div id="editor">
                 <div id="editor-top">
-                    <div id="commands">
+                    <!-- <div id="commands">
                         <button id="save-button">Save</button>
-                    </div>
+                    </div> -->
                 </div>
                 <div id="editor-input-container">
                     <input type="text" id="title-input" placeholder="Title" />
