--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             </p>
         </div>
         <main>
+            <div id="mobile-button-shower">
+                <button id="show-notes">
+                    <img id="show-notes-svg" src="./menu.svg" alt="notes" />
+                </button>
+            </div>
             <div id="saved-notes">
                 <input
                     type="text"
